[package]
name = "egui-mobile-test"
version = "0.1.0"
authors = ["Lucas Meurer <lucasmeurer96@gmail.com>", "Pandicon <70060103+Pandicon@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "egui-mobile-test-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-dependencies = ["com.google.android.material:material:1.8.0"]
project-dependencies = ["org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"]
app-plugins = ["org.jetbrains.kotlin.android"]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[dependencies]
log = "0.4.14"
chrono = "0.4"
eframe = { version = "0.30", default-features = false, features = ["wgpu", "default_fonts", "persistence", "android-native-activity"] }
egui_demo_lib = "0.30"
winit = "0.30.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"

[patch.crates-io]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui_demo_lib = { git = "https://github.com/emilk/egui", branch = "master" }

[profile.dev]
debug-assertions = false # You can then enable them specifically for your crate, but there is something with starting up an Android application that causes a debug assertion to fail

#eframe = {git = "https://github.com/emilk/egui", branch = "master"}
#
#eframe = { path = "../../IdeaProjects/egui/crates/eframe" }
#egui_demo_lib = { path = "../../IdeaProjects/egui/crates/egui_demo_lib" }
##winit = { git = "https://github.com/lucasmerlin/winit", branch = "geph-v0.29.x" }
#winit = { path = "../../IdeaProjects/github/winit"}